2020-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/RcppGSL-introduction.Rmd: And short subsection
	mentioning need for explicit getter in output.

2020-06-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.8

        * configure: Rebuilt

	* inst/include/RcppGSLForward.h: Add some missing 'inline' statements
	* inst/include/RcppGSL_matrix.h: Idem
	* inst/include/RcppGSL_matrix_view.h: Idem
	* inst/include/RcppGSL_vector.h: Idem
	* inst/include/RcppGSL_vector_view.h: Idem
	* inst/include/RcppGSLForward.h: Idem

	* inst/examples/RcppGSLExample/src/colNorm_old.cpp: Spun off
	alternate versions in seperate file to keep reference file simpler
	* inst/examples/RcppGSLExample/src/colNorm.cpp: Shortened

	* inst/examples/RcppGSLExample/man/colNorm.Rd: Update documentation
	to refer to matrix G just like the code does

	* .travis.yml: Update to 'bionic' and R 4.0

        * DESCRIPTION (Suggests): Removed 'inline' which is no longer used
	* .travis.yml (install): Idem

2020-04-01  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added a 'last commit' badge, small edits

2020-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add a Debian badge

2019-10-20  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.7

        * configure.ac: Mark as 0.3.7
        * configure: Rebuilt

	* inst/include/RcppGSL_types.h: Revert back from nullptr to NULL to
	not impose C++11 compilation on client packages

	* vignettes/rmd/RcppGSL-introduction.Rmd: Updated bibluigraphy handling
	* vignettes/rmd/Rcpp.bib: Copied in from Rcpp package
	* vignettes/rmd/Makefile: Added

2019-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version

	* DESCRIPTION(Suggests): Switch from RUnit to tinytest
	* tests/tinytest.R: Renamed and converted from doRUnit.R
	* inst/tinytest/: Renamed and converted from unitTests/